Resolve ContextLoader only once in AbstractTestContextBootstrapper
Closes gh-35994